namespace java com.igool.rpc.db.model.thrift
struct ImagePhotoRelDTO {
			1:string lsh,
			2:i32 businessDetailId,
			3:i32 userId,
			4:string createDate,
			5:string operatorType,
			6:i32 orderNum,
			7:string photoCode,
			8:string url
	}